# loculus-preprocessing-dummy

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-docker.yaml
src/loculus_preprocessing_dummy/: main.py
