[project]
name = "loculus-preprocessing-dummy"
version = "0.1.0"
description = "Dummy pre-processing pipeline for loculus"
readme = "README.md"
authors = [
    { name = "Sam Sims", email = "samsimss98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
preprocess = "loculus_preprocessing_dummy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
